--- a/app/src/main/res/drawable/background_footer.xml
+++ b/app/src/main/res/drawable/background_footer.xml
@@ -6,7 +6,7 @@
     </item>
     <item android:top="1dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/primary_900" />
+            <solid android:color="@color/primary_color" />
         </shape>
     </item>
 </layer-list>
