--- a/app/src/main/res/layout/component_header.xml
+++ b/app/src/main/res/layout/component_header.xml
@@ -2,19 +2,33 @@
 
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
-    android:background="@color/primary_600"
+    android:background="@color/primary_variant_color"
     >
 
+
+    <ImageView
+        android:id="@+id/header_logo"
+        android:layout_toStartOf="@+id/header_title"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:src="@drawable/app_logo"
+        android:contentDescription="@string/app_logo"
+    />
+
+
     <TextView
+        android:id="@+id/header_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
         android:text="@string/app_name"
-        android:textColor="@color/primary_50"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:textColor="@color/secondary_color"
+        tools:ignore="RelativeOverlap"
     />
 
 </RelativeLayout>
