--- a/app/src/main/res/layout/fragment_converter.xml
+++ b/app/src/main/res/layout/fragment_converter.xml
@@ -29,7 +29,7 @@
                 android:textSize="35sp"
                 android:gravity="center"
                 android:layout_marginBottom="16dp"
-                android:textColor="@color/dark"
+                android:textColor="@color/dark_color"
                 android:elevation="4dp"
                 android:shadowColor="#30000000"
                 android:shadowDx="2"
@@ -47,7 +47,7 @@
                 android:textAlignment="center"
                 android:layout_marginTop="10dp"
                 android:textSize="14sp"
-                android:textColor="@color/dark"
+                android:textColor="@color/dark_color"
                 android:text="@string/converter_page_description"
             />
 
@@ -59,7 +59,7 @@
                 android:textAlignment="center"
                 android:layout_marginTop="10dp"
                 android:textStyle="bold"
-                android:textColor="@color/dark"
+                android:textColor="@color/dark_color"
                 android:textSize="13sp"
                 android:text="@string/converter_page_after_description"
             />
@@ -103,7 +103,7 @@
                 android:hint="@string/converter_page_input_placeholder"
                 android:inputType="numberDecimal"
                 android:padding="15dp"
-                android:textColor="@color/dark"
+                android:textColor="@color/dark_color"
                 android:textColorHint="#546E7A"
             />
 
@@ -111,14 +111,14 @@
                 android:id="@+id/price_after_exchange"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/primary_900"
+                android:textColor="@color/primary_color"
             />
 
             <TextView
                 android:id="@+id/exchange_rate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/dark"
+                android:textColor="@color/dark_color"
             />
 
         </LinearLayout>
